[package]
name = "hermit-sync"
version = "0.1.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Synchronization primitives for kernels."
repository = "https://github.com/hermitcore/hermit-sync"
license = "MIT OR Apache-2.0"
keywords = ["mutex", "interrupts", "lazy", "static"]
categories = ["rust-patterns", "no-std"]

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }
generic_once_cell = "0.1"
lock_api = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14", default-features = false, features = [ "instructions" ] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.0"
tock-registers = { version = "0.8", default-features = false }
