[package]
name = "hermit-sync"
version = "0.1.5"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Synchronization primitives for kernels."
repository = "https://github.com/hermitcore/hermit-sync"
license = "MIT OR Apache-2.0"
keywords = ["mutex", "interrupts", "lazy", "static"]
categories = ["rust-patterns", "no-std"]

[dependencies]
exclusive_cell = "0.1"
generic_once_cell = "0.1"
interrupts = "0.1"
interrupt-mutex = "0.1"
lock_api = "0.4"
one-shot-mutex = "0.1.1"
spinning_top = "0.3"

[dev-dependencies]
rand = "0.8"
